--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 server.port=8080
+
+#Cambiar el formato de la fecha en la consola.
+
+logging.pattern.dateformat=hh:mm
+
+#Para quitar mensajes invasivos en la consola 
+
+spring.main.banner-mode=off
+
+#Para que en tiempo de ejecución no usemos el caché
+
+spring.thymeleaf.cache=false
+
+# Conexión a MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?usetimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+
