--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version>
+        <version>2.6.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tienda</groupId>
@@ -42,9 +42,9 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+        <dependency> 
+            <groupId>mysql</groupId>  
+            <artifactId>mysql-connector-java</artifactId>  
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>            
             <groupId>org.thymeleaf.extras</groupId> 
-            <artifactId>thymeleaf-extras-springsecurity6</artifactId>        
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>        
         </dependency>
         <dependency>   
             <groupId>org.webjars</groupId>            
