--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.sql=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 
+#logging.level.org.springframework.security=TRACE
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=900
